--- a/frontend/mainpage.css
+++ b/frontend/mainpage.css
@@ -53,7 +53,8 @@
 
 .rank-number {
     font-size: 35px;
-    margin-right: 15px;
+    margin-right: 25px;
+    margin-left: 55px;
     width: 40px;
 }
 
@@ -75,12 +76,13 @@
     font-size: 25px;
     width: 80px;
     text-align: right;
-    margin-right: 5px;
+    margin-right: 55px;
 }
 
 .show-more {
     text-align: center;
     margin-top: auto;
+    margin-bottom: 10px;
     color: var(--example);
     cursor: pointer;
     font-size: 12px;
