--- a/frontend/more_petition.css
+++ b/frontend/more_petition.css
@@ -32,7 +32,7 @@
     line-height: 1.4;
 }
 
-.home-button {
+.home-icon {
     background: none;
     border: none;
     color: var(--example);
@@ -44,7 +44,7 @@
     flex-shrink: 0;
 }
 
-.home-button:hover {
+.home-icon:hover {
     background-color: var(--main2);
 }
 
@@ -232,7 +232,7 @@
         font-size: 20px;
     }
     
-    .home-button {
+    .home-icon {
         align-self: flex-end;
         margin-left: 0;
     }
@@ -298,7 +298,7 @@
         font-size: 18px;
     }
     
-    .home-button {
+    .home-icon {
         padding: 3px;
     }
 
