--- a/frontend/percent_party.css
+++ b/frontend/percent_party.css
@@ -330,14 +330,16 @@
     .party-header {
         font-size: 24px;
         margin-bottom: 50px;
-        flex-direction: column;
-        gap: 10px;
+        flex-direction: row;
+        gap: 8px;
+        flex-wrap: wrap;
+        justify-content: center;
     }
     
     .party-header svg {
         width: 24px;
         height: 24px;
-        margin-left: 0;
+        margin-left: 5px;;
     }
 
     .party-selector {
